--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '288810133274849');
+  fbq('init', '1166187024171186');
   fbq('track', 'PageView');
+  fbq('track', 'ViewContent');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=288810133274849&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=1166187024171186&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
     
