--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo <span style="color:#FFFF00;font-size:42px">QUEIMAR</span> Mais de 17Kg Em <span style="color:#FFFF00;font-size:42px">30 Dias!</span></b></h3>
 
             <!-- VSL -->
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/697488514?h=bbb964ab88&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <div id="vid_62c0812a04d7e7000b83b430" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62c0812a04d7e7000b83b430" src="https://images.converteai.net/e808f68c-ec53-42c7-870a-40163caeb51b/players/62c0812a04d7e7000b83b430/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62c0812a04d7e7000b83b430" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62c0812a04d7e7000b83b430">var s=document.createElement("script");s.src="https://scripts.converteai.net/e808f68c-ec53-42c7-870a-40163caeb51b/players/62c0812a04d7e7000b83b430/player.js",s.async=!0,document.head.appendChild(s);</script>
 
            <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
